welcome.lessons.welcome.bat.bool1.Makes10.scala.error
makes10:2: error: value === is not a member of Int
	if (a===10 | b==10) { 
             ^